2013/07/26: IGAS v42
    1. Taint with Blizzard_RaidUI fixed.
    2. Imrpove the action button system.

2013/07/25: IGAS v42
    1. New group system for IFGroup, bases on the blizzard's SecureGroupHeader, all works smooth during combat.

2013/07/22:
	1. Re design the System.Widget.Unit.IFGroup, the unit panel should be worked based on the blizzard's SecureGroupHeader.

2013/07/16:
	1. Give the ScrollForm's default ScrollChild a default height, so the ScrollChild:GetTop() will return a not-nil value.

2013/07/14: IGAS v41
	1. Improve the System.Widget.Unit.IFGroup and IFPetGroup, now the raid panel can be show when entering the game in combat mode.More settings added to these interfaces.

2013/07/04:
    1. System.Widget.Unit.UnitFrame can handle the change of attribute "unit"

2013/06/30:
    1. Remove the __index and __newindex settings in the System.Widget.Unit.IFSpellHandler.SpellHandlerGroup, use properties to reduce cost and better for browsing.

2013/06/28: IGAS v40
    1. Improve the System.Widget.Unit.IFResurrect, make sure its objects will be hidden when the resurrection is over
    2. Fix the System.Widget.Unit.LevelLabel, refresh when the LevelFormat is changed

2013/06/27: IGAS v39
    1. Delete the custom event system from System.Object.
    2. Keyword 'script' is renamed to 'event'.
    3. Update all files with those changes.